Bug 462378 - Cache video/audio downloads to file - r+sr=bzbarsky