content/media/video/src/nsChannelToPipeListener.cpp
@@ -40,6 +40,7 @@
 #include "nsMediaDecoder.h"
 #include "nsIScriptSecurityManager.h"
 #include "nsChannelToPipeListener.h"
+#include "nsICachingChannel.h"
 
 nsChannelToPipeListener::nsChannelToPipeListener(nsMediaDecoder* aDecoder) :
   mDecoder(aDecoder),
@@ -103,7 +104,17 @@ nsresult nsChannelToPipeListener::OnStartRequest(nsIRequest* aRequest, nsISuppor
       mDecoder->SetTotalBytes(cl);
     }
   }
-  
+
+  nsCOMPtr<nsICachingChannel> cc = do_QueryInterface(aRequest);
+  if (cc) {
+    PRBool fromCache = PR_FALSE;
+    nsresult rv = cc->IsFromCache(&fromCache);
+
+    if (NS_SUCCEEDED(rv) && !fromCache) {
+      cc->SetCacheAsFile(PR_TRUE);
+    }
+  }
+
   /* Get our principal */
   nsCOMPtr<nsIChannel> chan(do_QueryInterface(aRequest));
   if (chan) {
